[gd_scene load_steps=8 format=3 uid="uid://dayivtyfadp3t"]

[ext_resource type="FontFile" uid="uid://4nma6akxgyya" path="res://ressources/Font/FSEX300.ttf" id="1_gvsm5"]
[ext_resource type="Script" path="res://scene/View/hud.gd" id="1_xmps3"]
[ext_resource type="StyleBox" uid="uid://dywpqe13q5hdc" path="res://scene/View/hud.tres" id="2_hcycx"]
[ext_resource type="Texture2D" uid="uid://ck2wkhbgjy3dc" path="res://ressources/Icon/pathIcon.png" id="3_8gp0c"]
[ext_resource type="Texture2D" uid="uid://buythi0jgfkw6" path="res://ressources/Icon/woodhouseIcon.png" id="4_5bq0v"]
[ext_resource type="Texture2D" uid="uid://dhv6mi0hwf5qa" path="res://ressources/Icon/woodStorageIcon.png" id="5_n6c0i"]
[ext_resource type="Texture2D" uid="uid://r0jxfrl5olp5" path="res://ressources/Icon/smallPortIcon.png" id="7_ib0uj"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xmps3")

[node name="RessourceBar" type="PanelContainer" parent="."]
offset_right = 192.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("2_hcycx")

[node name="MarginContainer" type="MarginContainer" parent="RessourceBar"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="RessourceBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PanelContainer" type="PanelContainer" parent="RessourceBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RessourceBar/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="GoldLabel" type="Label" parent="RessourceBar/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gvsm5")
text = "Gold : 0"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="RessourceBar/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RessourceBar/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="WoodLabel" type="Label" parent="RessourceBar/MarginContainer/HBoxContainer/PanelContainer2/MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gvsm5")
text = "Wood : 0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 246.0
grow_vertical = 0
alignment = 2

[node name="infoBar" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("2_hcycx")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/infoBar"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/infoBar/MarginContainer"]
layout_mode = 2

[node name="Prices" type="PanelContainer" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Prices"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Prices/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GoldCost" type="Label" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Prices/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gvsm5")
text = "Gold : 0"
horizontal_alignment = 1

[node name="WoodCost" type="Label" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Prices/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gvsm5")
text = "Wood : 0"
horizontal_alignment = 1

[node name="WorkCost" type="Label" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Prices/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gvsm5")
text = "Work : 0"
horizontal_alignment = 1

[node name="Description" type="PanelContainer" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Description"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Description/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Description" type="Label" parent="VBoxContainer/infoBar/MarginContainer/VBoxContainer/Description/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gvsm5")
text = "_
<PLACEHOLDER>
_"

[node name="BuildingBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("2_hcycx")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BuildingBar"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BuildingBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="path" type="Button" parent="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
icon = ExtResource("3_8gp0c")
icon_alignment = 1

[node name="colonisthouse" type="Button" parent="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
icon = ExtResource("4_5bq0v")
icon_alignment = 1

[node name="colonistStorage" type="Button" parent="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
icon = ExtResource("5_n6c0i")
icon_alignment = 1

[node name="smallPort" type="Button" parent="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
icon = ExtResource("7_ib0uj")
icon_alignment = 1

[connection signal="toggled" from="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer/path" to="." method="_on_path_toggled"]
[connection signal="toggled" from="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer/colonisthouse" to="." method="_on_colonisthouse_toggled"]
[connection signal="toggled" from="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer/colonistStorage" to="." method="_on_colonist_storage_toggled"]
[connection signal="toggled" from="VBoxContainer/BuildingBar/MarginContainer/HBoxContainer/smallPort" to="." method="_on_small_port_toggled"]
